--- a/contact-host.html
+++ b/contact-host.html
@@ -208,7 +208,7 @@
                   </div>
                 </nav>
                 <div tabindex="-1" class="page-shell-mobile">
-                  <div class="_1unac3l">
+                  <div class="site-content__body">
                     <div class="_1a5fl1v">
                       <div class="box-border">
                         <div
@@ -664,7 +664,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="_1unac3l">
+                <div class="site-content__body">
                   <div class="_1a5fl1v">
                     <div class="box-border">
                       <div
@@ -2599,9 +2599,9 @@
                                                             class="btn-primary"
                                                           >
                                                             <span
-                                                              class="tjxdvlu dir dir-ltr"
+                                                              class="site-content__create-btn-wrap dir dir-ltr"
                                                               ><span
-                                                                class="t12u7nq4 dir dir-ltr"
+                                                                class="site-content__create-btn dir dir-ltr"
                                                                 style="
                                                                   background-position: calc(
                                                                       (
@@ -2624,7 +2624,7 @@
                                                                 "
                                                               ></span></span
                                                             ><span
-                                                              class="c4wd1yj dir dir-ltr"
+                                                              class="site-content__create-btn-text dir dir-ltr"
                                                               >Check
                                                               availability<!-- -->
                                                             </span>
