--- a/explore-who.html
+++ b/explore-who.html
@@ -645,10 +645,10 @@
                                       <div class="blzgqu8 dir dir-ltr">
                                         Clear all
                                       </div></button
-                                    ><button type="button" class="_108mstlv">
-                                      <span class="tjxdvlu dir dir-ltr"
+                                    ><button type="button" class="site-content__header-button">
+                                      <span class="site-content__create-btn-wrap dir dir-ltr"
                                         ><span
-                                          class="t12u7nq4 dir dir-ltr"
+                                          class="site-content__create-btn dir dir-ltr"
                                           style="
                                             background-position: calc(
                                                 (100 - var(--mouse-x, 0)) * 1%
@@ -658,7 +658,7 @@
                                               );
                                           "
                                         ></span></span
-                                      ><span class="c4wd1yj dir dir-ltr"
+                                      ><span class="site-content__create-btn-text dir dir-ltr"
                                         ><div class="p1oks84c dir dir-ltr">
                                           <div class="blzgqu8 dir dir-ltr">
                                             <svg
