--- a/inbox.html
+++ b/inbox.html
@@ -8829,7 +8829,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_1unac3l"></div>
+                          <div class="site-content__body"></div>
                         </div>
                       </section>
                       <section
