--- a/login-security.html
+++ b/login-security.html
@@ -662,7 +662,7 @@
                                                       </div>
                                                       <div class="hero-banner__label">
                                                         <div class="_1ko9l4k">
-                                                          <div class="_11bwvo6">
+                                                          <div class="main-content__badge-wrapper">
                                                             <div
                                                               class="_114g51qn"
                                                             >
@@ -1814,7 +1814,7 @@
                                                         <div class="hero-banner__label">
                                                           <div class="_1ko9l4k">
                                                             <div
-                                                              class="_11bwvo6"
+                                                              class="main-content__badge-wrapper"
                                                             >
                                                               <div
                                                                 class="_114g51qn"
