--- a/merchandising.html
+++ b/merchandising.html
@@ -214,7 +214,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
-                        <div class="_1unac3l">
+                        <div class="site-content__body">
                           <div class="_1a5fl1v">
                             <div class="box-border">
                               <div
@@ -4184,7 +4184,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="_1unac3l">
+                <div class="site-content__body">
                   <div class="_1a5fl1v">
                     <div class="box-border">
                       <div
