--- a/payment.html
+++ b/payment.html
@@ -969,9 +969,9 @@
                                                       data-veloute="checkout-flow-submit-button"
                                                     >
                                                       <span
-                                                        class="tjxdvlu dir dir-ltr"
+                                                        class="site-content__create-btn-wrap dir dir-ltr"
                                                         ><span
-                                                          class="t12u7nq4 dir dir-ltr"
+                                                          class="site-content__create-btn dir dir-ltr"
                                                           style="
                                                             background-position: calc(
                                                                 (
@@ -994,7 +994,7 @@
                                                           "
                                                         ></span></span
                                                       ><span
-                                                        class="c4wd1yj dir dir-ltr"
+                                                        class="site-content__create-btn-text dir dir-ltr"
                                                         ><span class="search__submit-btn-text-center"
                                                           ><span class="box-border"
                                                             >Confirm and
@@ -1217,7 +1217,7 @@
                                                 "
                                               >
                                                 <div
-                                                  class="_1r2d8bf"
+                                                  class="main-content__desc"
                                                   role="img"
                                                   aria-label="Your booking is protected by AirCover"
                                                 >
