--- a/products.html
+++ b/products.html
@@ -7007,12 +7007,12 @@
                                                           <button
                                                             data-testid="homes-pdp-cta-btn"
                                                             type="button"
-                                                            class="_108mstlv"
+                                                            class="site-content__header-button"
                                                           >
                                                             <span
-                                                              class="tjxdvlu dir dir-ltr"
+                                                              class="site-content__create-btn-wrap dir dir-ltr"
                                                               ><span
-                                                                class="t12u7nq4 dir dir-ltr"
+                                                                class="site-content__create-btn dir dir-ltr"
                                                                 style="
                                                                   background-position: calc(
                                                                       (
@@ -7035,7 +7035,7 @@
                                                                 "
                                                               ></span></span
                                                             ><span
-                                                              class="c4wd1yj dir dir-ltr"
+                                                              class="site-content__create-btn-text dir dir-ltr"
                                                               >Check
                                                               availability
                                                             </span>
@@ -9200,12 +9200,12 @@
                                                           <button
                                                             data-testid="homes-pdp-cta-btn"
                                                             type="button"
-                                                            class="_108mstlv"
+                                                            class="site-content__header-button"
                                                           >
                                                             <span
-                                                              class="tjxdvlu dir dir-ltr"
+                                                              class="site-content__create-btn-wrap dir dir-ltr"
                                                               ><span
-                                                                class="t12u7nq4 dir dir-ltr"
+                                                                class="site-content__create-btn dir dir-ltr"
                                                                 style="
                                                                   background-position: calc(
                                                                       (
@@ -9228,7 +9228,7 @@
                                                                 "
                                                               ></span></span
                                                             ><span
-                                                              class="c4wd1yj dir dir-ltr"
+                                                              class="site-content__create-btn-text dir dir-ltr"
                                                               >Check
                                                               availability
                                                             </span>
@@ -16731,9 +16731,9 @@
                                                                   class="btn-primary"
                                                                 >
                                                                   <span
-                                                                    class="tjxdvlu dir dir-ltr"
+                                                                    class="site-content__create-btn-wrap dir dir-ltr"
                                                                     ><span
-                                                                      class="t12u7nq4 dir dir-ltr"
+                                                                      class="site-content__create-btn dir dir-ltr"
                                                                       style="
                                                                         background-position: calc(
                                                                             (
@@ -16758,7 +16758,7 @@
                                                                       "
                                                                     ></span></span
                                                                   ><span
-                                                                    class="c4wd1yj dir dir-ltr"
+                                                                    class="site-content__create-btn-text dir dir-ltr"
                                                                     >Check
                                                                     availability
                                                                   </span>
@@ -17225,9 +17225,9 @@
                                                                   class="btn-primary"
                                                                 >
                                                                   <span
-                                                                    class="tjxdvlu dir dir-ltr"
+                                                                    class="site-content__create-btn-wrap dir dir-ltr"
                                                                     ><span
-                                                                      class="t12u7nq4 dir dir-ltr"
+                                                                      class="site-content__create-btn dir dir-ltr"
                                                                       style="
                                                                         background-position: calc(
                                                                             (
@@ -17254,7 +17254,7 @@
                                                                       "
                                                                     ></span></span
                                                                   ><span
-                                                                    class="c4wd1yj dir dir-ltr"
+                                                                    class="site-content__create-btn-text dir dir-ltr"
                                                                     >Reserve
                                                                   </span>
                                                                 </button>
@@ -17951,9 +17951,9 @@
                                                                   class="btn-primary"
                                                                 >
                                                                   <span
-                                                                    class="tjxdvlu dir dir-ltr"
+                                                                    class="site-content__create-btn-wrap dir dir-ltr"
                                                                     ><span
-                                                                      class="t12u7nq4 dir dir-ltr"
+                                                                      class="site-content__create-btn dir dir-ltr"
                                                                       style="
                                                                         background-position: calc(
                                                                             (
@@ -17980,7 +17980,7 @@
                                                                       "
                                                                     ></span></span
                                                                   ><span
-                                                                    class="c4wd1yj dir dir-ltr"
+                                                                    class="site-content__create-btn-text dir dir-ltr"
                                                                     >Change
                                                                     dates
                                                                   </span>
