--- a/trips.html
+++ b/trips.html
@@ -295,9 +295,9 @@
                                           aria-label="Start searching"
                                           href="/?source=itinerary"
                                           class="btn-primary"
-                                          ><span class="tjxdvlu dir dir-ltr"
+                                          ><span class="site-content__create-btn-wrap dir dir-ltr"
                                             ><span
-                                              class="t12u7nq4 dir dir-ltr"
+                                              class="site-content__create-btn dir dir-ltr"
                                               style="
                                                 background-position: calc(
                                                     (100 - var(--mouse-x, 0)) *
@@ -309,7 +309,7 @@
                                                   );
                                               "
                                             ></span></span
-                                          ><span class="c4wd1yj dir dir-ltr"
+                                          ><span class="site-content__create-btn-text dir dir-ltr"
                                             >Start searching
                                           </span></a
                                         >
